istio-basics/workspace/security/authorization/authorizationpolicy-allow-with-scope4.yaml
# See more at https://istio.io/latest/docs/tasks/security/authorization/authz-http/

# Run the following command to create the ratings-viewer policy to allow the reviews workload, which issues requests using the cluster.local/ns/default/sa/bookinfo-productpage 
# service account, to access the details workload through GET methods:


apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: "ratings-viewer"
  namespace: default
spec:
  selector:
    matchLabels:
      app: ratings
  action: ALLOW
  rules:
  - from:
    - source:
        principals: ["cluster.local/ns/default/sa/bookinfo-reviews"]
    to:
    - operation:
        methods: ["GET"]
